--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
             <a  href="about.html">About me</a>
             <a  href="services.html">Services</a>
             <a href="https://zidreynkounkou-pro.github.io/wdd130/wwr/index.html">Projects</a>
-            <a  href="#">Hire me</a>
+            <a  href="diagram.html">Diagrams</a>
         </nav>
     </header>
     <section class="home">
@@ -27,7 +27,7 @@
         
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/relga-zidrey-nkounkou-018012249"><img class="facebook" src="images/linkedin.png" alt="facebook icon here"></a>
-                <a href="https://wa.me//+242068093411"><img class="whatsapp" src="images/whatsapp.jpeg" alt="WhatsApp icone here"></a>
+                <a href="https://wa.me//+242068093411"><img class="whatsapp" src="images/Whatsapp.jpeg" alt="WhatsApp icone here"></a>
                 <a href="https://www.facebook.com/zidrey.nkounkou"><img class="facebook" src="images/facebook.png" alt="facebook icon here"></a>
             </div>
             <a href="#" class="btn">Download CV</a>
